antlr4-generated-sources/visualsvm/SVMParser.java
// Generated from SVM.g4 by ANTLR 4.8
package visualsvm;

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUSH=1, POP=2, ADD=3, SUB=4, MULT=5, DIV=6, STOREW=7, LOADW=8, BRANCH=9, 
		BRANCHEQ=10, BRANCHLESSEQ=11, JS=12, LOADRA=13, STORERA=14, LOADTM=15, 
		STORETM=16, LOADFP=17, STOREFP=18, COPYFP=19, LOADHP=20, STOREHP=21, PRINT=22, 
		HALT=23, COL=24, LABEL=25, INTEGER=26, COMMENT=27, WHITESP=28, ERR=29;
	public static final int
		RULE_assembly = 0, RULE_instruction = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"assembly", "instruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'push'", "'pop'", "'add'", "'sub'", "'mult'", "'div'", "'sw'", 
			"'lw'", "'b'", "'beq'", "'bleq'", "'js'", "'lra'", "'sra'", "'ltm'", 
			"'stm'", "'lfp'", "'sfp'", "'cfp'", "'lhp'", "'shp'", "'print'", "'halt'", 
			"':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUSH", "POP", "ADD", "SUB", "MULT", "DIV", "STOREW", "LOADW", 
			"BRANCH", "BRANCHEQ", "BRANCHLESSEQ", "JS", "LOADRA", "STORERA", "LOADTM", 
			"STORETM", "LOADFP", "STOREFP", "COPYFP", "LOADHP", "STOREHP", "PRINT", 
			"HALT", "COL", "LABEL", "INTEGER", "COMMENT", "WHITESP", "ERR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SVM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public int[] code = new int[ExecuteVM.CODESIZE];
	public int[] sourceMap = new int[ExecuteVM.CODESIZE];
	private int i = 0;
	private Map<String,Integer> labelDef = new HashMap<>();
	private Map<Integer,String> labelRef = new HashMap<>();
	private void codem(int line, int ... c) {
	   	for (int x : c) {
	   		this.code[i] = x;
	   		this.sourceMap[i] = line-1;
	   		i++;
	   	}
	} 
	public SVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AssemblyContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SVMParser.EOF, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAssembly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUSH) | (1L << POP) | (1L << ADD) | (1L << SUB) | (1L << MULT) | (1L << DIV) | (1L << STOREW) | (1L << LOADW) | (1L << BRANCH) | (1L << BRANCHEQ) | (1L << BRANCHLESSEQ) | (1L << JS) | (1L << LOADRA) | (1L << STORERA) | (1L << LOADTM) | (1L << STORETM) | (1L << LOADFP) | (1L << STOREFP) | (1L << COPYFP) | (1L << LOADHP) | (1L << STOREHP) | (1L << PRINT) | (1L << HALT) | (1L << LABEL))) != 0)) {
				{
				{
				setState(4);
				instruction();
				}
				}
				setState(9);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(10);
			match(EOF);
			 for (Integer j: labelRef.keySet()) 
											code[j]=labelDef.get(labelRef.get(j)); 
										
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Token t;
		public Token n;
		public Token l;
		public TerminalNode PUSH() { return getToken(SVMParser.PUSH, 0); }
		public TerminalNode INTEGER() { return getToken(SVMParser.INTEGER, 0); }
		public TerminalNode LABEL() { return getToken(SVMParser.LABEL, 0); }
		public TerminalNode POP() { return getToken(SVMParser.POP, 0); }
		public TerminalNode ADD() { return getToken(SVMParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(SVMParser.SUB, 0); }
		public TerminalNode MULT() { return getToken(SVMParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(SVMParser.DIV, 0); }
		public TerminalNode STOREW() { return getToken(SVMParser.STOREW, 0); }
		public TerminalNode LOADW() { return getToken(SVMParser.LOADW, 0); }
		public TerminalNode COL() { return getToken(SVMParser.COL, 0); }
		public TerminalNode BRANCH() { return getToken(SVMParser.BRANCH, 0); }
		public TerminalNode BRANCHEQ() { return getToken(SVMParser.BRANCHEQ, 0); }
		public TerminalNode BRANCHLESSEQ() { return getToken(SVMParser.BRANCHLESSEQ, 0); }
		public TerminalNode JS() { return getToken(SVMParser.JS, 0); }
		public TerminalNode LOADRA() { return getToken(SVMParser.LOADRA, 0); }
		public TerminalNode STORERA() { return getToken(SVMParser.STORERA, 0); }
		public TerminalNode LOADTM() { return getToken(SVMParser.LOADTM, 0); }
		public TerminalNode STORETM() { return getToken(SVMParser.STORETM, 0); }
		public TerminalNode LOADFP() { return getToken(SVMParser.LOADFP, 0); }
		public TerminalNode STOREFP() { return getToken(SVMParser.STOREFP, 0); }
		public TerminalNode COPYFP() { return getToken(SVMParser.COPYFP, 0); }
		public TerminalNode LOADHP() { return getToken(SVMParser.LOADHP, 0); }
		public TerminalNode STOREHP() { return getToken(SVMParser.STOREHP, 0); }
		public TerminalNode PRINT() { return getToken(SVMParser.PRINT, 0); }
		public TerminalNode HALT() { return getToken(SVMParser.HALT, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(13);
				((InstructionContext)_localctx).t = match(PUSH);
				setState(14);
				((InstructionContext)_localctx).n = match(INTEGER);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), PUSH, Integer.parseInt((((InstructionContext)_localctx).n!=null?((InstructionContext)_localctx).n.getText():null))); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(16);
				((InstructionContext)_localctx).t = match(PUSH);
				setState(17);
				((InstructionContext)_localctx).l = match(LABEL);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), PUSH); labelRef.put(i++,(((InstructionContext)_localctx).l!=null?((InstructionContext)_localctx).l.getText():null)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(19);
				((InstructionContext)_localctx).t = match(POP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), POP); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(21);
				((InstructionContext)_localctx).t = match(ADD);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), ADD); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(23);
				((InstructionContext)_localctx).t = match(SUB);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), SUB); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(25);
				((InstructionContext)_localctx).t = match(MULT);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), MULT); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(27);
				((InstructionContext)_localctx).t = match(DIV);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), DIV); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(29);
				((InstructionContext)_localctx).t = match(STOREW);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), STOREW); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(31);
				((InstructionContext)_localctx).t = match(LOADW);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), LOADW); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(33);
				((InstructionContext)_localctx).l = match(LABEL);
				setState(34);
				match(COL);
				 labelDef.put((((InstructionContext)_localctx).l!=null?((InstructionContext)_localctx).l.getText():null), i); 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(36);
				((InstructionContext)_localctx).t = match(BRANCH);
				setState(37);
				((InstructionContext)_localctx).l = match(LABEL);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), BRANCH); labelRef.put(i++,(((InstructionContext)_localctx).l!=null?((InstructionContext)_localctx).l.getText():null)); 
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(39);
				((InstructionContext)_localctx).t = match(BRANCHEQ);
				setState(40);
				((InstructionContext)_localctx).l = match(LABEL);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), BRANCHEQ); labelRef.put(i++,(((InstructionContext)_localctx).l!=null?((InstructionContext)_localctx).l.getText():null)); 
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(42);
				((InstructionContext)_localctx).t = match(BRANCHLESSEQ);
				setState(43);
				((InstructionContext)_localctx).l = match(LABEL);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), BRANCHLESSEQ); labelRef.put(i++,(((InstructionContext)_localctx).l!=null?((InstructionContext)_localctx).l.getText():null)); 
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(45);
				((InstructionContext)_localctx).t = match(JS);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), JS); 
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(47);
				((InstructionContext)_localctx).t = match(LOADRA);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), LOADRA); 
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(49);
				((InstructionContext)_localctx).t = match(STORERA);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), STORERA); 
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(51);
				((InstructionContext)_localctx).t = match(LOADTM);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), LOADTM); 
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(53);
				((InstructionContext)_localctx).t = match(STORETM);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), STORETM); 
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(55);
				((InstructionContext)_localctx).t = match(LOADFP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), LOADFP); 
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(57);
				((InstructionContext)_localctx).t = match(STOREFP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), STOREFP); 
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(59);
				((InstructionContext)_localctx).t = match(COPYFP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), COPYFP); 
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(61);
				((InstructionContext)_localctx).t = match(LOADHP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), LOADHP); 
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(63);
				((InstructionContext)_localctx).t = match(STOREHP);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), STOREHP); 
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(65);
				((InstructionContext)_localctx).t = match(PRINT);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), PRINT); 
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(67);
				((InstructionContext)_localctx).t = match(HALT);
				 codem((((InstructionContext)_localctx).t!=null?((InstructionContext)_localctx).t.getLine():0), HALT); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}